--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
 }
 
 .top {
+    position: fixed;
+    top: 0%;
+    left: 0;
+    z-index: 10;
     width: 100%;
     padding: 5px;
     background-color: white;
